controller corregido uso de mapStruct
